lesson 13 fix horizontal scroll bug

--- a/13/homework/euclid/css/style.css
+++ b/13/homework/euclid/css/style.css
@@ -31,6 +31,10 @@ body {
   color: var(--color-grey);
 }
 
+.site-container {
+  overflow:hidden;
+}
+
 ul {
   padding: 0;
   list-style-type: none;
@@ -961,12 +965,12 @@ svg {
   }
 
   .nav__list {
+    display: flex;
     position: absolute;
     z-index: 15;
     top: 0;
     left: 0;
     right: 0;
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 400px;
@@ -1366,10 +1370,6 @@ svg {
 }
 
 @media (max-width: 576px) {
-  .nav__list {
-    transform: translateX(101%);
-  }
-
   .swiper-container {
     height: 302px;
   }
